--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -85,7 +85,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=loadconnection.LoadConnection
+javafx.main.class=filmmanager.FilmManager
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
