corretto selezione genere e produttore in modifica film. Ridensionamento interfaccie per migliore leggibilità

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/FilmManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqljdbc42.jar=C:\\Program Files\\Microsoft JDBC Driver 4.2 for SQL Server\\sqljdbc_4.2\\ita\\sqljdbc42.jar
+file.reference.sqljdbc42.jar=sqljdbc42.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,6 +40,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
